<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomsheet_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    android:paddingBottom="70dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginHorizontal="180dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_gig_label"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:text="@string/apply_for_this_gig"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:paddingHorizontal="30dp"
        android:paddingVertical="12dp"
        android:text="@string/apply"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/create_gig_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/create_gig_label" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/apply_button"
        app:layout_constraintEnd_toEndOf="@id/apply_button"
        app:layout_constraintStart_toStartOf="@id/apply_button"
        app:layout_constraintTop_toBottomOf="@id/apply_button" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_input"
        app:boxBackgroundColor="?attr/colorOnPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="26dp"
        android:hint="@string/note_to_the_idea_owner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apply_button">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_input_inner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:lines="8"
            android:minLines="8"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:gravity="top|start"
            android:scrollbars="vertical"
            tools:ignore="RtlHardcoded" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>